fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 5rem 0;
-    margin-bottom: 5.5rem;
+    margin-bottom: 2.5rem;
     
 }
 
